# Universal-Gear

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  LICENSE  MANIFESTO.md  MANIFESTO.pt-BR.md  README.md  README.pt-BR.md  pyproject.toml  toy_output.txt  ugear-camadas-roadmap.md
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  architecture.pt-BR.md  cli.md  cli.pt-BR.md  contracts.md  contracts.pt-BR.md  plugins.md  plugins.pt-BR.md  quickstart.md  quickstart.pt-BR.md  tutorial-first-plugin.md  tutorial-first-plugin.pt-BR.md  use-cases.md  use-cases.pt-BR.md
src/universal_gear/: __init__.py  __main__.py
src/universal_gear/cli/: checker.py  export.py  main.py  panels.py  scaffold.py  spreadsheet.py
src/universal_gear/core/: config.py  contracts.py  exceptions.py  interfaces.py  logging.py  metrics.py  pipeline.py  registry.py
src/universal_gear/plugins/agro/: action.py  analyzer.py  collector.py  config.py  model.py  monitor.py  processor.py
src/universal_gear/plugins/agro/fixtures/: sample_cepea.json
src/universal_gear/plugins/finance/: __init__.py  action.py  analyzer.py  collector.py  config.py  model.py  monitor.py  processor.py
src/universal_gear/stages/actions/: alert.py
src/universal_gear/stages/analyzers/: seasonal.py  zscore.py
src/universal_gear/stages/collectors/: synthetic.py
src/universal_gear/stages/models/: conditional.py  montecarlo.py
src/universal_gear/stages/monitors/: backtest.py  scorecard.py
src/universal_gear/stages/processors/: aggregator.py  normalizer.py
tests/: conftest.py  test_agro_plugin.py  test_checker.py  test_contracts.py  test_export_xlsx.py  test_finance_plugin.py  test_integration.py  test_panels.py  test_registry_pipeline.py  test_scaffold.py  test_spreadsheet.py  test_stages.py
