[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "universal-gear"
version = "0.1.0"
description = "Open-source decision framework for market intelligence under uncertainty"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
agro = ["agrobr>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
ugear = "universal_gear.cli.main:app"

[project.entry-points."universal_gear.collectors"]

[tool.hatch.build.targets.wheel]
packages = ["src/universal_gear"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "TCH",
    "RUF",
    "PT",
    "RET",
    "ARG",
    "PL",
]
ignore = [
    "PLR0913",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "ARG002"]

[tool.ruff.lint.isort]
known-first-party = ["universal_gear"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
